--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>See 'N' Say Storymaker</title>
      <link rel="stylesheet" href="style.css">
 </head>
-</head>
+</head>https://github.com/copilot/spaces
 <body>
     <h1>See 'N' Say Storymaker</h1>
   <p>Click each button to choose parts of your story, then click "Tell Story".</p>
