--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>See 'N' Say Storymaker</title>
-     <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <title>Lab 5 | COMP1073 Client-Side JavaScript</title>
+  <link href="css/normalize.css" rel="stylesheet" />
+  <link href="css/styles.css" rel="stylesheet" />
 </head>
-</head>https://github.com/copilot/spaces
 <body>
-    <h1>See 'N' Say Storymaker</h1>
-  <p>Click each button to choose parts of your story, then click "Tell Story".</p>
-<div class="selectors">
-    <button id="whoBtn">Who</button> <span id="whoText"></span><br>
-    <button id="whereBtn">Where</button> <span id="whereText"></span><br>
-    <button id="actionBtn">Action</button> <span id="actionText"></span><br>
-    <button id="objectBtn">Object</button> <span id="objectText"></span><br>
-    <button id="endingBtn">Ending</button> <span id="endingText"></span><br>
-  </div>
-  <div class="controls">
-    <button id="tellBtn">Tell Story</button>
-    <button id="randomBtn">Random Story</button>
-    <button id="resetBtn">Reset</button>
-  </div>
+  <h1>Lab 5: Page Color Changer</h1>
 
-  <p id="storyBox">Your story will appear here.</p>
+  <p>
+    Use the sliders below to adjust the <abbr title="Red, Green, Blue">RGB</abbr> values
+    and change the page's <code>background-color</code>.
+  </p>
 
-  <script src="script.js"></script>
+  <!-- Red Slider -->
+  <label for="red">Red</label>
+  <input id="red" type="range" min="0" max="255" value="0" />
+
+  <!-- Green Slider -->
+  <label for="green">Green</label>
+  <input id="green" type="range" min="0" max="255" value="0" />
+
+  <!-- Blue Slider -->
+  <label for="blue">Blue</label>
+  <input id="blue" type="range" min="0" max="255" value="0" />
+
+  <!-- Optional color preview -->
+  <p>Current color: <span id="colorValue">rgb(0, 0, 0)</span></p>
+
+  <!-- Load JavaScript at the end (best practice) -->
+  <script src="js/page-color-changer.js"></script>
 </body>
 </html>
